--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="bower_components/modernizr/modernizr.js"></script>
     <script type="text/javascript" src="//use.typekit.net/fau0kac.js"></script>
     <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+    <script type="text/javascript" src="bower_components/velocity/jquery.velocity.min.js"></script>
   </head>
   <body>
     <!-- Being Intro Title -->
@@ -24,28 +25,33 @@
            </em>
 
         </h1>
-        <div class="small-12"><img src="http://placehold.it/960x400"></div>
-          <h3 class="small-2 medium-4 columns"></h3>
-          <h3 class="small-8 medium-4 columns byline">By Ann Nonymous</h3>
-          <h3 class="small-2 medium-4 columns "></h3>
+        <div class="small-12 columns">
+          <div >
+            <img class="small-10 medium-6 large-5 svg" src="assets/face.svg"/>
+          </div>
+        </div>
+          <h3 class="small-2 medium-3 columns"></h3>
+          <h3 class="small-8 medium-6 columns byline">By Ann Nonymous</h3>
+          <h3 class="small-2 medium-3 columns "></h3>
       </div>
     </div>
     <!-- Begin Content -->
     <div class="content">
     <div class="row">
       <div class="small-12 columns">
-        <div class="small-12 medium-8 columns p-block">
-          <p>Which of the young men does she like the best? Parting tracked by arriving…perpetual payment of the perpetual loan, Growing among black folks as among white, They have cleared the beams away…they tenderly lift me forth. Landscapes projected masculine full-sized and golden..</p>
+        <div class="small-12 medium-2 columns">
         </div>
-        <div class="small-12 medium-4 columns">
-          <img src="http://placehold.it/350x150">
+        <div class="small-12 medium-8 columns intro">
+          <p>Which of the young men does she like the best? Parting tracked by arriving…perpetual payment of the perpetual loan, Growing among black folks as among white, They have cleared the beams away…they tenderly lift me forth. Landscapes projected masculine full-sized and golden.</p>
+        </div>
+        <div class="small-12 medium-2 columns">
         </div>
       </div>
       <div class="small-12 columns">
         <div class="show-for-medium-up medium-4 columns">
           <img src="http://placehold.it/350x1500">
         </div>
-        <div class="small-12 medium-8 columns p-block">
+        <div class="small-12 medium-8 columns">
           <p>No friend of mine takes his ease in my chair, Dazzling and tremendous how quick the sunrise would kill me, It was tied in your mouth…in mine it begins to be loosened. Lithographing Kronos and Zeus his son, and Hercules his grandson, Earth of the vitreous pour of the full moon just tinged with blue!.</p>
 
           <p>The machinist rolls up his sleeves…the policeman travels his beat…the gate-keeper marks who pass, You should have been with us that day round the chowder-kettle. If they are not yours as much as mine they are nothing or next to nothing, I have heard what the talkers were talking…the talk of the beginning and the end, The nearest gnat is an explanation and a drop or the motion of waves a key.</p>
@@ -76,5 +82,43 @@
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/foundation/js/foundation.min.js"></script>
     <script src="js/app.js"></script>
+    <script type="text/javascript">
+      $("#mortarboard-whole").velocity({
+          opacity: 1, top: "50%"
+      }, 1000);
+    </script>
+    <script type="text/javascript">
+      /*
+     * Replace all SVG images with inline SVG
+     */
+        jQuery('img.svg').each(function(){
+            var $img = jQuery(this);
+            var imgID = $img.attr('id');
+            var imgClass = $img.attr('class');
+            var imgURL = $img.attr('src');
+
+            jQuery.get(imgURL, function(data) {
+                // Get the SVG tag, ignore the rest
+                var $svg = jQuery(data).find('svg');
+
+                // Add replaced image's ID to the new SVG
+                if(typeof imgID !== 'undefined') {
+                    $svg = $svg.attr('id', imgID);
+                }
+                // Add replaced image's classes to the new SVG
+                if(typeof imgClass !== 'undefined') {
+                    $svg = $svg.attr('class', imgClass+' replaced-svg');
+                }
+
+                // Remove any invalid XML tags as per http://validator.w3.org
+                $svg = $svg.removeAttr('xmlns:a');
+
+                // Replace image with new SVG
+                $img.replaceWith($svg);
+
+            }, 'xml');
+
+        });
+    </script>
   </body>
 </html>
