Added magellan menu

--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
     <script src="bower_components/instafeed.js/instafeed.min.js"></script>
   </head>
   <body>
+    <div data-magellan-expedition="fixed">
+        <dl class="sub-nav">
+          <dd data-magellan-arrival="section-one"><a href="#section-one">Section One</a></dd>
+          <dd data-magellan-arrival="section-two"><a href="#section-two">Section Two</a></dd>
+        </dl>
+      </div>
     <!-- Being Intro Title -->
     <div class="row">
       <div class="small-12 large-12 columns main-title">
@@ -44,6 +50,7 @@
         </div>
         <ul class="small-12 columns show-for-medium-up" id="instafeed"></ul> 
       </div>
+
       <div class="small-12 columns">
           <p>No friend of mine takes his ease in my chair, Dazzling and tremendous how quick the sunrise would kill me, It was tied in your mouth…in mine it begins to be loosened. Lithographing Kronos and Zeus his son, and Hercules his grandson, Earth of the vitreous pour of the full moon just tinged with blue!.</p>
 
@@ -52,8 +59,30 @@
 
           <p>What have I to do with lamentation? A few light kisses…a few embraces…a reaching around of arms, Where the life-car is drawn on the slipnoose…where the heat hatches pale-green eggs in the dented sand, The smoke of my own breath, At home in the fleet of iceboats, sailing with the rest and tacking.</p>
 
+          <a name="section-one"></a>
+          <h3 data-magellan-destination="section-one">Section One</h3>
+
           <p>The captain on the quarter deck coldly giving his orders through a countenance white as a sheet, Long enough have you dreamed contemptible dreams, Have you felt so proud to get at the meaning of poems? And in due time you shall repay the same service to me; They desire he should like them and touch them and speak to them and stay with them.</p>
             
+          <p>Me going in for my chances, spending for vast returns, Parting tracked by arriving…perpetual payment of the perpetual loan, A few idly owning, and they the wheat continually claiming. The farmer stops by the bars of a Sunday and looks at the oats and rye, All these I feel or am..</p>
+
+          <p>And any thing I have I bestow. And the tree-toad is a chef-d'ouvre for the highest, There was never any more inception than there is now, This is the grass that grows wherever the land is and the water is, We have not struck, he composedly cried, We have just begun our part of the fighting.</p>
+
+          <p>And to all generals that lost engagements, and all overcome heroes, and the numberless unknown heroes equal to the greatest heroes known. (Miserable! I do not laugh at your oaths nor jeer you,) Picking out here one that shall be my amie, Why should I wish to see God better than this day?</p>
+
+          <a name="section-two"></a>
+          <h3 data-magellan-destination="section-two">Section Two</h3>
+
+          <p>The nine months' gone is in the parturition chamber, her faintness and pains are advancing; And I could come every afternoon of my life to look at the farmer's girl boiling her iron tea-kettle and baking shortcake. Dancing yet through the streets in a phallic procession…rapt and austere in the woods, a gymnosophist, I reach to the leafy lips…I reach to the polished breasts of melons. Trickling sap of maple, fibre of manly wheat, it shall be you.</p>
+
+          <p>Many sweating and ploughing and thrashing, and then the chaff for payment receiving, Hefts of the moving world at innocent gambols, silently rising, freshly exuding, I celebrate myself, I anchor my ship for a little while only, Here and there with dimes on the eyes walking.</p>
+
+          <p>Accepting the gospels, accepting him that was crucified, knowing assuredly that he is divine, Trickling sap of maple, fibre of manly wheat, it shall be you; The slow-march played at night at the head of the association, A Kentuckian walking the vale of the Elkhorn in my deerskin leggings, These are the thoughts of all men in all ages and lands, they are not original with me.</p>
+
+          <p>Many sweating and ploughing and thrashing, and then the chaff for payment receiving, Hefts of the moving world at innocent gambols, silently rising, freshly exuding, I celebrate myself, I anchor my ship for a little while only, Here and there with dimes on the eyes walking.</p>
+
+          <p>Accepting the gospels, accepting him that was crucified, knowing assuredly that he is divine, Trickling sap of maple, fibre of manly wheat, it shall be you; The slow-march played at night at the head of the association, A Kentuckian walking the vale of the Elkhorn in my deerskin leggings, These are the thoughts of all men in all ages and lands, they are not original with me.</p>
+
           <p>Me going in for my chances, spending for vast returns, Parting tracked by arriving…perpetual payment of the perpetual loan, A few idly owning, and they the wheat continually claiming. The farmer stops by the bars of a Sunday and looks at the oats and rye, All these I feel or am..</p>
 
           <p>And any thing I have I bestow. And the tree-toad is a chef-d'ouvre for the highest, There was never any more inception than there is now, This is the grass that grows wherever the land is and the water is, We have not struck, he composedly cried, We have just begun our part of the fighting.</p>
@@ -65,6 +94,34 @@
           <p>Many sweating and ploughing and thrashing, and then the chaff for payment receiving, Hefts of the moving world at innocent gambols, silently rising, freshly exuding, I celebrate myself, I anchor my ship for a little while only, Here and there with dimes on the eyes walking.</p>
 
           <p>Accepting the gospels, accepting him that was crucified, knowing assuredly that he is divine, Trickling sap of maple, fibre of manly wheat, it shall be you; The slow-march played at night at the head of the association, A Kentuckian walking the vale of the Elkhorn in my deerskin leggings, These are the thoughts of all men in all ages and lands, they are not original with me.</p>
+
+          <p>Many sweating and ploughing and thrashing, and then the chaff for payment receiving, Hefts of the moving world at innocent gambols, silently rising, freshly exuding, I celebrate myself, I anchor my ship for a little while only, Here and there with dimes on the eyes walking.</p>
+
+          <p>Accepting the gospels, accepting him that was crucified, knowing assuredly that he is divine, Trickling sap of maple, fibre of manly wheat, it shall be you; The slow-march played at night at the head of the association, A Kentuckian walking the vale of the Elkhorn in my deerskin leggings, These are the thoughts of all men in all ages and lands, they are not original with me.</p>
+
+          <p>Me going in for my chances, spending for vast returns, Parting tracked by arriving…perpetual payment of the perpetual loan, A few idly owning, and they the wheat continually claiming. The farmer stops by the bars of a Sunday and looks at the oats and rye, All these I feel or am..</p>
+
+          <p>And any thing I have I bestow. And the tree-toad is a chef-d'ouvre for the highest, There was never any more inception than there is now, This is the grass that grows wherever the land is and the water is, We have not struck, he composedly cried, We have just begun our part of the fighting.</p>
+
+          <p>And to all generals that lost engagements, and all overcome heroes, and the numberless unknown heroes equal to the greatest heroes known. (Miserable! I do not laugh at your oaths nor jeer you,) Picking out here one that shall be my amie, Why should I wish to see God better than this day?</p>
+
+          <p>The nine months' gone is in the parturition chamber, her faintness and pains are advancing; And I could come every afternoon of my life to look at the farmer's girl boiling her iron tea-kettle and baking shortcake. Dancing yet through the streets in a phallic procession…rapt and austere in the woods, a gymnosophist, I reach to the leafy lips…I reach to the polished breasts of melons. Trickling sap of maple, fibre of manly wheat, it shall be you.</p>
+
+          <p>Many sweating and ploughing and thrashing, and then the chaff for payment receiving, Hefts of the moving world at innocent gambols, silently rising, freshly exuding, I celebrate myself, I anchor my ship for a little while only, Here and there with dimes on the eyes walking.</p>
+
+          <p>Accepting the gospels, accepting him that was crucified, knowing assuredly that he is divine, Trickling sap of maple, fibre of manly wheat, it shall be you; The slow-march played at night at the head of the association, A Kentuckian walking the vale of the Elkhorn in my deerskin leggings, These are the thoughts of all men in all ages and lands, they are not original with me.</p>
+
+          <p>Many sweating and ploughing and thrashing, and then the chaff for payment receiving, Hefts of the moving world at innocent gambols, silently rising, freshly exuding, I celebrate myself, I anchor my ship for a little while only, Here and there with dimes on the eyes walking.</p>
+
+          <p>Accepting the gospels, accepting him that was crucified, knowing assuredly that he is divine, Trickling sap of maple, fibre of manly wheat, it shall be you; The slow-march played at night at the head of the association, A Kentuckian walking the vale of the Elkhorn in my deerskin leggings, These are the thoughts of all men in all ages and lands, they are not original with me.</p>
+
+          <p>Me going in for my chances, spending for vast returns, Parting tracked by arriving…perpetual payment of the perpetual loan, A few idly owning, and they the wheat continually claiming. The farmer stops by the bars of a Sunday and looks at the oats and rye, All these I feel or am..</p>
+
+          <p>And any thing I have I bestow. And the tree-toad is a chef-d'ouvre for the highest, There was never any more inception than there is now, This is the grass that grows wherever the land is and the water is, We have not struck, he composedly cried, We have just begun our part of the fighting.</p>
+
+          <p>And to all generals that lost engagements, and all overcome heroes, and the numberless unknown heroes equal to the greatest heroes known. (Miserable! I do not laugh at your oaths nor jeer you,) Picking out here one that shall be my amie, Why should I wish to see God better than this day?</p>
+
+
         </div>
     </div>
   </div>
